# GTT2026

./: .gitignore  .replit  README.md  app.py  config.py  extensions.py  models.py  pyproject.toml  replit.md  requirements.txt  telegram_bot.py  url_inventory.csv
attached_assets/: INSTR_01_ARCHITECTURE_1766755245723.md  INSTR_02_DATABASE_1766755245723.md  INSTR_03_ROUTING_AND_URLS_1766755245723.md  INSTR_04_CATALOG_LOGIC_1766755245723.md  INSTR_05_SEO_AND_META_1766755245723.md  INSTR_06_REDIRECTS_1766755245723.md  INSTR_07_ADMIN_PANEL_1766755245723.md  INSTR_08_NEWS_1766755245723.md  INSTR_09_TELEGRAM_BOT_1766755245723.md  INSTR_10_IMPORT_AND_CSV_1766755245723.md  INSTR_11_ACCEPTANCE_1766755245723.md  Pasted---1769516082786_1769516082786.txt  Pasted---1769591708773_1769591708773.txt  Pasted--Flask-SQLAlchemy--1769522806333_1769522806333.txt  Pasted--HTML-Microdata-itemprop-itemscope-div-product-de-17691_1769167752011.txt  Pasted--div-class-container-nav-class--1768402110129_1768402110129.txt  TZ_MAIN_1766755245723.md  final_news_full_1768234016668.csv  final_news_full_semicolon_1768234206459.csv  glavtrubtorg_backup_20260127_160645_1769530487636.json  gtt_tp1_1768385957180.csv  url_inventory_1766755346654.csv
blueprints/: admin.py  public.py  public_services.py  redirects.py
cli/: admin.py
scripts/: import_url_inventory.py
services/: backup_service.py  captcha_service.py  email_service.py  image_uploader.py  image_utils.py  importers.py  pdf_utils.py  rag_service.py  schema.py  seo.py  size_matcher.py  slug.py  telegram_service.py
templates/: base.html  (+1 more)
(+58 files in other folders)
